# BetterChan-API

./: .gitignore  main.py  pyproject.toml  scrapy.cfg
api/: __init__.py  routes.py  types.py
database/: __init__.py  models.py  utils.py
hentai_scrap/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
hentai_scrap/spiders/: manga copy.py  manga.py
